--- a/gimmix/INSTALL
+++ b/gimmix/INSTALL
@@ -4,24 +4,25 @@ Gimmix 0.1b
 
 Gimmix requires the following pacakges to be installed before compiling.
 * Gtk+-2.10 or higher
+* libglade-2.6.0 or higher
 * libmpd-0.12.0 or higher
 * libnotify-0.4.x or higher
 * libconfuse
 
 ==> Installation procedure:
 
-Installing gimmix is very simple for now. Before installing, make sure
-your system has all the required packages. Then, just cd into the gimmix
-source directory and type the following command(s)
+Installing gimmix is very simple for now. Before installing, make sure 
+your system has all the required packages. After you unpack the source,
+just follow these steps to install gimmix.
 
+cd gimmix-0.1b
 make
-
-and then, 
-
 make install (as root)
 
-Once it is over, you can start gimmix by simply typing
+Now, you can start gimmix by simply typing
 gimmix
+
+Note: gimmix stores its configuration settings in ~/.gimmixrc
 
 It should not be a problem to install gimmix. However, if you encounter
 any problem, please mail the author at priyankmg@gmail.com with
