--- a/gimmix/tags/gimmix-0.1beta3/src/INSTALL
+++ b/gimmix/tags/gimmix-0.1beta3/src/INSTALL
@@ -1,4 +1,4 @@
-Gimmix 0.1b
+Gimmix 0.1beta3
 
 ==> Requirements:
 
@@ -15,7 +15,7 @@ Installing gimmix is very simple for now. Before installing, make sure
 your system has all the required packages. After you unpack the source,
 just follow these steps to install gimmix.
 
-cd gimmix-0.1b
+cd gimmix-0.1beta3
 make
 make install (as root)
 
