--- a/trunk/src/README
+++ b/trunk/src/README
@@ -1,5 +1,5 @@
-Gimmix-0.1 README
-=================
+Gimmix-0.2RC1 README
+====================
 
 Gimmix is a graphical Music player daemon (MPD) client written in C
 using Gtk+2.
