== GIMMIX version 0.2 Released == Release highlights: * Improved memory usage, fixed a lot of memory leaks. * Introduced optional system tray notification. * Fixed bugs with the config system on x86_64 systems. * Implemented Library Search. * Added support for updating mpd database. * Songs can be deleted from the playlist by pressing the delete key. * Fixed bugs with the repeat and shuffle code. * Many other improvements.

--- a/trunk/src/README
+++ b/trunk/src/README
@@ -1,4 +1,4 @@
-Gimmix-0.2RC2 README
+Gimmix-0.2 README
 ====================
 
 Gimmix is a graphical Music player daemon (MPD) client written in C
@@ -8,7 +8,8 @@ Features:
 * Simple and cleanInterface.
 * System tray icon support.
 * Playlist browser.
-* Notification support (experimental).
+* Playlist search.
+* Notification support (Display the currently playing song in systray).
 * Small memory footprint.
 
 Requirements:
