--- a/trunk/src/Changelog
+++ b/trunk/src/Changelog
@@ -1,10 +1,33 @@
-0.1 (3-11-2006)
+Version 0.2 (16-11-2006)
+* A l33t-new logo.
+* Fixed several memory leaks.
+* Lots of bugfixes.
+* Display the currently playing song in a notification bubble in system tray.
+* Added a configuration option for disabling notifications.
+* Modified the First run dialog a bit.
+* Library browser is now integrated with the main window again.
+* Changed icon of files in library browser.
+* Added icons for current playlist and library tabs.
+* Added "Search-As-You-Type" support for searching songs in the mpd database.
+* Added a popup menu item for updating mpd library/database.
+* Songs can be deleted from the playlist by pressing the DEL key.
+* Gimmix is now minimised to systray (if systray icon is enabled) when user closes the player window. (Reported by Rohan Dhruva)
+* Fixed a small bug in Makefile (Thanks to Alex Smith)
+* Fixed a race condition in playlist repeat and shuffle code.
+* Fixed a bug where the status of repeat and shuffle buttons was not updated if other mpd client changed the status of repeat and shuffle. (Reported by Rohan Dhruva)
+* Fixed the buggy config code which caused random segfaults.
+* Fixed bugs with the confi system on x86_64.
+* Added tooltips for buttons.
+* Display '*' instead of actual text in password entries.
+* Added a .desktop file with the source.
+
+Version 0.1 (3-11-2006)
 * Made the ui more cleaner and compact.
 * File browser is now separated from the main playlist window.
 * Another bunch of bug fixes.
 * Fixed a random crash on x86_64 systems.
 
-0.1beta2 (31-10-2006)
+Version 0.1beta2 (31-10-2006)
 * Applied a patch to fix the hardcoded CFLAGS. Gimmix can now be built with x86_64 flags. (Patch by Alex Smith).
 * Fixed a LOT of bugs and memory leaks.
 * Gimmix now also displays the bitrate of the currently playing song in info window.
@@ -14,5 +37,5 @@
 * Improved cpu and memory usage.
 * Lots of small fixes.
 
-0.1-beta (27-10-2006)
+Version 0.1-beta (27-10-2006)
 * Initial public release.
