--- a/trunk/src/INSTALL
+++ b/trunk/src/INSTALL
@@ -1,4 +1,4 @@
-Gimmix 0.2RC2
+Gimmix 0.2
 
 Requirements:
 
@@ -15,7 +15,7 @@ Installing gimmix is very simple. Before installing, make sure
 your system has all the required packages. After you unpack the source,
 just follow these steps to install gimmix.
 
-cd gimmix-0.1
+cd gimmix-0.2
 make
 make install (as root)
 
@@ -23,7 +23,9 @@ Now, you can start gimmix by simply typing
 gimmix
 
 Note: gimmix stores its configuration settings in ~/.gimmixrc
+The configuration file layout has been changed since version 0.1,
+so, if you are upgrading from an older version of gimmix (gimmix-0.1)
+then make sure you delete your old .gimmixrc before starting gimmix.
 
-It should not be a problem to install gimmix. However, if you encounter
-any problem, please mail the author at priyankmg@gmail.com with
+If you encounter any problem, please send an e-mail to the author at priyankmg@gmail.com with
 a detailed description of the problem.
