New feature: Added a configuration option to allow user to set whether gimmix should stop playback when it exits. gimmix-config.h: added new option stop_on_exit to config structure. gimmix-config.c: added new option stop_on_exit. gimmix.glade: * Re-ordered the tabs in the preferences dialog. * Added a new option to stop playback when gimmix exits. README: updated features. (ID3v2 tagging support)

--- a/trunk/src/README
+++ b/trunk/src/README
@@ -9,6 +9,7 @@ Features:
 * System tray icon support.
 * Playlist browser.
 * Playlist search.
+* ID3v2 tag editing support.
 * Notification support (Display the currently playing song in systray).
 * Small memory footprint.
 
