--- a/trunk/src/README
+++ b/trunk/src/README
@@ -1,4 +1,4 @@
-Gimmix-0.2 README
+Gimmix-0.2.1-RC1 README
 ====================
 
 Gimmix is a graphical Music player daemon (MPD) client written in C
