README: Added gimmix url INSTALL: small changes Makefile: cleanup gimmix-tagedit.c: set file and tag to NULL by default.

--- a/trunk/src/INSTALL
+++ b/trunk/src/INSTALL
@@ -1,5 +1,5 @@
-Gimmix 0.3
-===========
+Gimmix Install Instructions
+============================
 
 Requirements:
 =============
@@ -28,6 +28,7 @@ then make sure you delete your old .gimmixrc before starting gimmix.
 
 Configuration options:
 ======================
+
 Following is a list of valid configuration options for gimmix.
 As from version 0.3, the new config file layout will be followed.
 
