INSTALL: updated for 0.3 release README: updated for 0.3 release gimmix-config.c: add a new configuration option "full_view_mode" which when true, displays gimmix in full mode. false indicates compact mode. gimmix-interface.c: gimmix now remembers the window mode (full/compact) gimmix-firstrun.c: set full_view_mode to false on init.

--- a/trunk/src/README
+++ b/trunk/src/README
@@ -2,15 +2,15 @@ Gimmix-0.3 README
 ==================
 
 Gimmix is a graphical Music player daemon (MPD) client written in C
-using Gtk+2.
+using GTK+2.
 
 Features:
 * Simple and Clean Interface.
-* System tray icon support.
 * Library browser.
 * Library search. (search by artist, album, filename, etc)
 * Playlist management (manage mpd playlists)
 * ID3v2 tag editing support.
+* System tray icon support.
 * Support for controlling gimmix through Keyboard.
 * Notification support (Displays the currently playing song in systray).
 * Small memory footprint.
