update INSTALL and README.

--- a/trunk/src/INSTALL
+++ b/trunk/src/INSTALL
@@ -18,7 +18,7 @@ Installing gimmix is very simple. Before installing, make sure
 your system has all the required packages. After you unpack the source,
 just follow these steps to install gimmix.
 
-cd gimmix-0.3.1
+./configure 
 make
 make install (as root)
 
