--- a/trunk/src/README
+++ b/trunk/src/README
@@ -32,8 +32,22 @@ Gimmix stores its configuration settings in ~/.gimmixrc
 NOTE: The configuration file layout has changed in gimmix-0.3. Please
 delete your ~/.gimmixrc before running gimmix.
 
-Configuration options:
-======================
+Keybindings:
+============
+Gimmix keybindings are not yet configurable unless you manually edit the source.
+
+'z'		-> Previous song
+'x' or 'c'	-> Play/Pause (Toggle)
+'v'		-> Stop
+'b'		-> Next song
+'i'		-> Song information
+'r'		-> Toggle Repeat
+'s'		-> Toggle Shuffle
+
+You can also adjust volume by scrolling your mouse wheel on the system tray icon.
+
+Configuration file options:
+===========================
 
 Following is a list of valid configuration options for gimmix.
 As from version 0.3, the new config file layout will be followed.
@@ -57,8 +71,8 @@ to function properly.
 
 Make sure your .gimmixrc has all these configuration values set.
 
-Other optional configuration options:
-=====================================
+Other optional configuration file options:
+==========================================
 
 play_on_add = true or false
 if true, songs will automatically be played when you add them to the playlist.
