--- a/trunk/src/INSTALL
+++ b/trunk/src/INSTALL
@@ -24,5 +24,5 @@ make install (as root)
 
 Note: gimmix stores its configuration settings in ~/.gimmixrc
 The configuration file layout has been changed in the new version,
-so, if you are upgrading from an older version of gimmix (gimmix-0.1)
+so, if you are upgrading from an older version of gimmix (0.1 or 0.2)
 then make sure you delete your old .gimmixrc before starting gimmix.
