AUTHORS, gimmix.c: Added some credits. gimmix-playlist.c: Make gimmix_library_update public.

--- a/trunk/src/AUTHORS
+++ b/trunk/src/AUTHORS
@@ -1,2 +1,2 @@
-Priyank Gosalia <priyankmg@gmail.com>
-Alex Smith <alex@alex-smith.me.uk>
+Priyank Gosalia <priyankmg@gmail.com> (Main Developer)
+Alex Smith <alex@alex-smith.me.uk> (Autoconf support)
