gimmix-config: * New configuration option 'enable_notification' (enables/disables displaying of system tray tooltips) gimmix-core: * New function gimmix_strip_file_ext() : strips the file's extension. gimmix-interface: * Fixed a weird bug that caused that caused gimmix to continue running in background even after the window was closed. This happened when gimmix was run with system tray icon disabled. * Fixed handling of window geometry. * Fix some crashes because of the new UI. gimmix-tagedit: * Modified the error messages a bit. gimmix-prefs: * New preferences option to allow user to enable/disable systray tooltips. gimmix-firstrun: * Minor fixes Changelog: updated for 0.4.0 release.

--- a/trunk/src/Changelog
+++ b/trunk/src/Changelog
@@ -1,3 +1,16 @@
+Version 0.4.0 (xx-xx-2007)
+* Brand new interface. Gimmix is much more cleaner than before and the
+ui is a lot more compact.
+* Revamped the first run dialog.
+* Library is now separated from the main window.
+* A new libnotify-style tooltip with progress bar.
+* Fixed a problem with displaying long filenames having no ID3 information.
+* Don't display the full path of a file in current playlist. Not even extension.
+* Don't display the file's extension in current playlist, song info and tooltip.
+* Gimmix gets its first translation.
+* New translation: zh_TW (Thanks to Cheng-Wei Chien)
+* Many more fixes.
+
 Version 0.3.1 (26-12-2006)
 * Added Autoconf 2.5 support (Thanks to Alex Smith)
 * Added a new status bar at the bottom of the player window, which displays the current player status.
